Work on admin namespace

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -4,6 +4,8 @@ es:
     register: 'Registrarse/Ingresar'
     add_game: 'Agregar Partido'
     remove_game: 'Quitar Partido'
+    sign_up: 'Registrarse'
+    sign_in: 'Ingresar'
     
   activerecord:
     models:
