Modified quiniela form to accept games results

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -39,6 +39,7 @@ es:
         local: 'Local'
         visitor: 'Visitante'
         date: 'Fecha'
+        result: 'Resultado'
       team:
         name: 'Nombre'
         league: 'Liga'
