Changes to enum and the dropdown menu

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -11,7 +11,10 @@ es:
     registered_users: 'Usuarios Registrados'
     registered: 'Ya registrado'
     choices: 'Contestar Quiniela'
-    
+  result: 'Resultado'
+  draw: 'Empate'
+  visitor: 'Visitante'
+
   activerecord:
     models:
       quiniela:
