--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -11,7 +11,9 @@ es:
     registered_users: 'Usuarios Registrados'
     registered: 'Dar de baja'
     choices: 'Contestar Quiniela'
-
+    name: 'Quiniela SYE'
+    versus: 'Versus'
+    
   enums:
     result:
       draw: 'Empate'
