--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2,6 +2,7 @@ es:
   app:
     home: 'Home'
     register: 'Registrarse/Ingresar'
+    log_out: 'Salir'
     add_game: 'Agregar Partido'
     remove_game: 'Quitar Partido'
     sign_up: 'Registrarse'
