--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -4,7 +4,7 @@ es:
     register: 'Registrarse/Ingresar'
     log_out: 'Salir'
     add_game: 'Agregar Partido'
-    remove_game: 'Quitar Partido'
+    remove_game: 'X'
     sign_up: 'Registrarse'
     sign_in: 'Ingresar'
     forgot_pw: 'Olvidaste tu contraseña?'
@@ -16,11 +16,15 @@ es:
     versus: 'Versus'
     games_info: 'Informacion de los partidos'
     quiniela_info: 'Informacion de la quiniela'
+
   enums:
     result:
       draw: 'Empate'
       local: 'Local'
       visitor: 'Visitante'
+    roles:
+      admin: 'Administrador'
+      general: 'Usuario'
 
   activerecord:
     models:
