--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -8,7 +8,7 @@ es:
     sign_up: 'Registrarse'
     sign_in: 'Ingresar'
     forgot_pw: 'Olvidaste tu contraseña?'
-    show: 'Ver detalles'
+    show: 'Detalles'
     registered_users: 'Usuarios Registrados'
     registered: 'Dar de baja'
     choices: 'Contestar Quiniela'
@@ -16,10 +16,10 @@ es:
     versus: 'Versus'
     games_info: 'Informacion de los partidos'
     quiniela_info: 'Informacion de la quiniela'
-    current: 'Quinielas Proximas a empezar'
+    current: 'Proximas Quinielas'
     user_quinielas: 'Mis quinielas'
-    past_quinielas: 'Quinielas pasadas'
-    dash_board: 'Dashboard'
+    past_quinielas: 'Mis Quinielas pasadas'
+    dash_board: 'Panel de Control'
 
   enums:
     result:
