--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,17 +1,17 @@
 es:
   app:
     home: 'Inicio'
-    register: 'Registrarse/Ingresar'
+    register: 'Registrarse'
     log_out: 'Salir'
     add_game: 'Agregar Partido'
     remove_game: 'X'
-    sign_up: 'Registrarse'
+    sign_up: 'Suscribirse'
     sign_in: 'Ingresar'
     forgot_pw: 'Olvidaste tu contraseña?'
     show: 'Detalles'
     registered_users: 'Usuarios Registrados'
     registered: 'Dar de baja'
-    choices: 'Contestar Quiniela'
+    choices: 'Quiniela'
     name: 'Quiniela SYE'
     versus: 'Versus'
     games_info: 'Informacion de los partidos'
