Created choice table and added in progress to game

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -23,6 +23,7 @@ es:
 
   enums:
     result:
+      in_progress: 'Por Empezar'
       draw: 'Empate'
       local: 'Local'
       visitor: 'Visitante'
